@@ -19,7 +19,6 @@
 package com.publicissapient.kpidashboard.azure.client.metadata;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -28,7 +27,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.apache.commons.collections4.CollectionUtils;
-import org.apache.commons.collections4.MapUtils;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.atlassian.jira.rest.client.api.domain.Field;
@@ -40,14 +38,12 @@ import com.publicissapient.kpidashboard.azure.util.AzureConstants;
 import com.publicissapient.kpidashboard.common.constant.CommonConstant;
 import com.publicissapient.kpidashboard.common.constant.MetadataType;
 import com.publicissapient.kpidashboard.common.model.application.FieldMapping;
-import com.publicissapient.kpidashboard.common.model.azure.AzureStateCategory;
 import com.publicissapient.kpidashboard.common.model.jira.BoardMetadata;
 import com.publicissapient.kpidashboard.common.model.jira.Identifier;
 import com.publicissapient.kpidashboard.common.model.jira.Metadata;
 import com.publicissapient.kpidashboard.common.model.jira.MetadataIdentifier;
 import com.publicissapient.kpidashboard.common.model.jira.MetadataValue;
 import com.publicissapient.kpidashboard.common.repository.application.FieldMappingRepository;
-import com.publicissapient.kpidashboard.common.repository.azure.AzureStateCategoryRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.BoardMetadataRepository;
 import com.publicissapient.kpidashboard.common.repository.jira.MetadataIdentifierRepository;
 
@@ -64,7 +60,6 @@ public class MetaDataClientImpl implements MetadataClient {
 	private final BoardMetadataRepository boardMetadataRepository;
 	private final FieldMappingRepository fieldMappingRepository;
 	private final MetadataIdentifierRepository metadataIdentifierRepository;
-	private final AzureStateCategoryRepository azureStateCategoryRepository;
 
 	/**
 	 * Creates object
@@ -79,13 +74,12 @@ public class MetaDataClientImpl implements MetadataClient {
 	 *            for saving missing field mapping
 	 */
 	public MetaDataClientImpl(AzureAdapter azureAdapter, BoardMetadataRepository boardMetadataRepository,
-			FieldMappingRepository fieldMappingRepository, MetadataIdentifierRepository metadataIdentifierRepository, AzureStateCategoryRepository azureStateCategoryRepository) {
+			FieldMappingRepository fieldMappingRepository, MetadataIdentifierRepository metadataIdentifierRepository) {
 
 		this.boardMetadataRepository = boardMetadataRepository;
 		this.azureAdapter = azureAdapter;
 		this.fieldMappingRepository = fieldMappingRepository;
 		this.metadataIdentifierRepository = metadataIdentifierRepository;
-		this.azureStateCategoryRepository= azureStateCategoryRepository;
 	}
 
 	@Override
@@ -111,7 +105,6 @@ public class MetaDataClientImpl implements MetadataClient {
 			}
 
 			if (CollectionUtils.isNotEmpty(statusList)) {
-				processAndSaveStateCategory(projectConfig.getBasicProjectConfigId().toString(),statusList);
 				mapWorkFlow(statusList, metadataList);
 			}
 			boardMetadata.setMetadata(metadataList);
@@ -250,9 +243,9 @@ public class MetaDataClientImpl implements MetadataClient {
 		fieldMapping.setSprintName(customField.get(CommonConstant.SPRINT));
 		fieldMapping.setJiradefecttype(issueTypeMap.get(CommonConstant.BUG));
 
-		fieldMapping.setJiraIssueTypeNames(issueTypeMap.getOrDefault(CommonConstant.ISSUE_TYPE,new ArrayList<>()).stream().toArray(String[]::new));
+		fieldMapping.setJiraIssueTypeNames(issueTypeMap.get(CommonConstant.ISSUE_TYPE).stream().toArray(String[]::new));
 		fieldMapping
-				.setJiraIssueTypeNamesAVR(issueTypeMap.getOrDefault(CommonConstant.ISSUE_TYPE, new ArrayList<>()).stream().toArray(String[]::new));
+				.setJiraIssueTypeNamesAVR(issueTypeMap.get(CommonConstant.ISSUE_TYPE).stream().toArray(String[]::new));
 		fieldMapping.setJiraIssueTypeNamesKPI161(
 				issueTypeMap.getOrDefault(CommonConstant.ISSUE_TYPE, new ArrayList<>()));
 		fieldMapping.setJiraIssueTypeNamesKPI151(
@@ -264,12 +257,12 @@ public class MetaDataClientImpl implements MetadataClient {
 		fieldMapping.setJiraIssueTypeNamesKPI148(
 				issueTypeMap.getOrDefault(CommonConstant.ISSUE_TYPE, new ArrayList<>()));
 		List<String> firstStatusList = workflowMap.get(CommonConstant.FIRST_STATUS);
-		fieldMapping.setJiraIssueEpicType(issueTypeMap.getOrDefault(CommonConstant.EPIC,new ArrayList<>()).stream().toList());
-		fieldMapping.setEpicJobSize(customField.getOrDefault(CommonConstant.JOB_SIZE,""));
-		fieldMapping.setEpicRiskReduction(customField.getOrDefault(CommonConstant.RISK_REDUCTION,""));
-		fieldMapping.setEpicTimeCriticality(customField.getOrDefault(CommonConstant.TIME_CRITICALITY,""));
-		fieldMapping.setEpicUserBusinessValue(customField.getOrDefault(CommonConstant.USER_BUSINESS_VALUE,""));
-		fieldMapping.setEpicWsjf(customField.getOrDefault(CommonConstant.WSJF, ""));
+		fieldMapping.setJiraIssueEpicType(issueTypeMap.get(CommonConstant.EPIC).stream().collect(Collectors.toList()));
+		fieldMapping.setEpicJobSize(customField.get(CommonConstant.JOB_SIZE));
+		fieldMapping.setEpicRiskReduction(customField.get(CommonConstant.RISK_REDUCTION));
+		fieldMapping.setEpicTimeCriticality(customField.get(CommonConstant.TIME_CRITICALITY));
+		fieldMapping.setEpicUserBusinessValue(customField.get(CommonConstant.USER_BUSINESS_VALUE));
+		fieldMapping.setEpicWsjf(customField.get(CommonConstant.WSJF));
 		if (CollectionUtils.isNotEmpty(firstStatusList)) {
 			fieldMapping.setStoryFirstStatus(firstStatusList.get(0));
 			fieldMapping.setStoryFirstStatusKPI171(firstStatusList.get(0));
@@ -521,53 +514,7 @@ public class MetaDataClientImpl implements MetadataClient {
 
 	private List<String> createFieldList(Set<String> allTypes, Identifier identifier) {
 		List<String> identifierValue = identifier.getValue() == null ? new ArrayList<>() : identifier.getValue();
-		return identifierValue.stream().filter(allTypes::contains).toList();
-	}
-
-	/**
-	 * convert status list to AzureStateCategory
-	 * 
-	 * @param basicProjectConfigId
-	 *            basicProjectConfigId
-	 * @param statusList
-	 *            statusList
-	 */
-	private void processAndSaveStateCategory(String basicProjectConfigId, List<Status> statusList) {
-		AzureStateCategory azureStateCategory = azureStateCategoryRepository
-				.findByBasicProjectConfigId(basicProjectConfigId);
-		if (null == azureStateCategory) {
-			Map<String, Set<String>> statusCategoryMap = statusList.stream()
-					.collect(Collectors.toMap(Status::getDescription, // Key mapper
-							status -> new HashSet<>(Collections.singletonList(status.getName())), // Value mapper
-							(existingSet, newName) -> { // Merge function
-								existingSet.addAll(newName);
-								return existingSet;
-							}, HashMap::new // Supplier for the map
-					));
-			if (MapUtils.isNotEmpty(statusCategoryMap)) {
-				AzureStateCategory stateCategory = new AzureStateCategory();
-				stateCategory.setBasicProjectConfigId(basicProjectConfigId);
-				statusCategoryMap.forEach((category, value) -> {
-
-					if (AzureConstants.COMPLETED.equalsIgnoreCase(category)) {
-						stateCategory.setCompletedList(value);
-					} else if (AzureConstants.RESOLVED.equalsIgnoreCase(category)) {
-						stateCategory.setResolvedList(value);
-					} else if (AzureConstants.INPROGRESS.equalsIgnoreCase(category)) {
-						stateCategory.setInProgressList(value);
-					} else if (AzureConstants.PROPOSED.equalsIgnoreCase(category)) {
-						stateCategory.setProposedList(value);
-					} else if (AzureConstants.REMOVED.equalsIgnoreCase(category)) {
-						stateCategory.setRemovedList(value);
-					}
-
-				});
-				azureStateCategoryRepository.save(stateCategory);
-				log.info("saved project state category for the project : {}", basicProjectConfigId);
-			}
-		} else {
-			log.info("project state category is already in db for the project : {} ", basicProjectConfigId);
-		}
+		return identifierValue.stream().filter(allTypes::contains).collect(Collectors.toList());
 	}
 
 }
